--- a/Project/Logic/Logic.csproj
+++ b/Project/Logic/Logic.csproj
@@ -44,5 +44,11 @@
     <Compile Include="LogicAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{9f7981c9-5801-43d3-9a85-f67dc2e09740}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
