--- a/Project/Data/Data.csproj
+++ b/Project/Data/Data.csproj
@@ -43,9 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ball.cs" />
+    <Compile Include="BallAPI.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="DataAPI.cs" />
     <Compile Include="DataEventArgs.cs" />
+    <Compile Include="DataLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
